--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+dill==0.3.2
+matplotlib==3.1.1
 motor==2.1.0
+numpy==1.17.2
 pandas==0.25.1
+scikit-learn==0.21.3
+seaborn==0.10.0
+tensorflow==1.15.0
 tornado==6.0.3
