--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,60 @@
+absl-py==0.14.0
+astor==0.8.1
+astunparse==1.6.3
+cached-property==1.5.2
+cachetools==4.2.4
+certifi==2021.5.30
+charset-normalizer==2.0.6
+clang==5.0
+cycler==0.10.0
 dill==0.3.2
-matplotlib==3.1.1
+flatbuffers==1.12
+forestci==0.5.1
+gast==0.4.0
+google-auth==1.35.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.41.0
+h5py==3.1.0
+idna==3.2
+importlib-metadata==4.8.1
+joblib==1.0.1
+keras==2.6.0
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.2
+Markdown==3.3.4
+matplotlib==3.4.3
 motor==2.1.0
-numpy==1.17.2
-pandas==0.25.1
-scikit-learn==0.21.3
-seaborn==0.10.0
-tensorflow==1.15.0
+numpy==1.19.5
+oauthlib==3.1.1
+opt-einsum==3.3.0
+pandas==1.3.3
+Pillow==8.3.2
+protobuf==3.18.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pymongo==3.12.0
+pyparsing==2.4.7
+python-dateutil==2.8.2
+pytz==2021.1
+requests==2.26.0
+requests-oauthlib==1.3.0
+rsa==4.7.2
+scikit-learn==1.0
+scipy==1.7.1
+seaborn==0.11.2
+six==1.15.0
+tensorboard==2.6.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.6.0
+tensorflow-estimator==2.6.0
+termcolor==1.1.0
+threadpoolctl==2.2.0
 tornado==6.0.3
+typing-extensions==3.7.4.3
+urllib3==1.26.7
+Werkzeug==2.0.1
+wrapt==1.12.1
+zipp==3.5.0
